# bound

./: .gitignore  .travis.yml  AUTHORS.markdown  Bound-Class.html  Bound-Name.html  Bound-Scope-Simple.html  Bound-Scope.html  Bound-TH.html  Bound-Term.html  Bound-Var.html  Bound.hs  Bound.html  CHANGELOG.markdown  README.markdown  Setup.lhs  bound.cabal  bound.haddock  cabal.haskell-ci  cabal.project  doc-index.html  index-frames.html  index.html  mini_Bound-Class.html  mini_Bound-Name.html  mini_Bound-Scope-Simple.html  mini_Bound-Scope.html  mini_Bound-TH.html  mini_Bound-Term.html  mini_Bound-Var.html  mini_Bound.html
.github/workflows/: haskell-ci.yml
Bound/: Class.hs  Scope.hs  Term.hs  Var.hs
doc/: BoundLaws.hs  bound-laws.cabal
examples/: Deriving.hs  Exp.hs  Imperative.hs  Overkill.hs  Simple.hs
src/: Bound-Class.html  Bound-Name.html  Bound-Scope-Simple.html  Bound-Scope.html  Bound-TH.html  Bound-Term.html  Bound-Var.html  Bound.hs  Bound.html
src/Bound/: Class.hs  Name.hs  Scope.hs  ScopeT.hs  TH.hs  Term.hs  Var.hs
src/Bound/Scope/: Simple.hs
tests/: doctests.hs
