name:          bound-laws
category:      Language, Compilers/Interpreters
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/bound/
bug-reports:   http://github.com/ekmett/bound/issues
copyright:     Copyright (C) 2012-2013 Edward A. Kmett
synopsis:      Making de Bruijn Succ Less
build-type:    Simple
description:   Some laws for the @Bound@ class

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.4,
  GHC==8.10.7,
  GHC==9.0.2,
  GHC==9.2.8,
  GHC==9.4.8,
  GHC==9.6.6,
  GHC==9.8.2,
  GHC==9.10.1

source-repository head
  type: git
  location: git://github.com/ekmett/bound.git

library
  exposed-modules: BoundLaws
  hs-source-dirs: .
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
    base >= 4.9 && < 5,
    bound
